{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 113,
  "lineage": "dbb3903a-d7bb-7b61-19e1-507f9f70df32",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb",
      "name": "web_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:loadbalancer/app/web-alb/325002b07199b115",
            "arn_suffix": "app/web-alb/325002b07199b115",
            "dns_name": "web-alb-1691823174.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:656417668387:loadbalancer/app/web-alb/325002b07199b115",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "security_groups": [
              "sg-0fedc3f2bb5fa6f7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b41d3f3ea40ed4b"
              },
              {
                "subnet_id": "subnet-034972a8ca93610fc"
              },
              {
                "subnet_id": "subnet-0dc96795479ce3589"
              }
            ],
            "subnets": [
              "subnet-00b41d3f3ea40ed4b",
              "subnet-034972a8ca93610fc",
              "subnet-0dc96795479ce3589"
            ],
            "vpc_id": "vpc-0257d5c2e2f298224",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security.aws_security_group.elb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:listener/app/web-alb/325002b07199b115/168d0010975b45db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:targetgroup/target-group-1/15a6daf3c361195c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656417668387:listener/app/web-alb/325002b07199b115/168d0010975b45db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:loadbalancer/app/web-alb/325002b07199b115",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.application.aws_alb.web_alb",
            "module.application.aws_alb_target_group.target_group_1",
            "module.security.aws_security_group.elb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "rule-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:targetgroup/target-group-1/15a6daf3c361195c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:listener-rule/app/web-alb/325002b07199b115/168d0010975b45db/3cb443da47e51e6a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656417668387:listener-rule/app/web-alb/325002b07199b115/168d0010975b45db/3cb443da47e51e6a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:listener/app/web-alb/325002b07199b115/168d0010975b45db",
            "priority": 100
          },
          "dependencies": [
            "module.application.aws_alb.web_alb",
            "module.application.aws_alb_listener.web_alb_listener",
            "module.application.aws_alb_target_group.target_group_1",
            "module.security.aws_security_group.elb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656417668387:targetgroup/target-group-1/15a6daf3c361195c",
            "arn_suffix": "targetgroup/target-group-1/15a6daf3c361195c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656417668387:targetgroup/target-group-1/15a6daf3c361195c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:internet-gateway/igw-07e5624b2994afa92",
            "id": "igw-07e5624b2994afa92",
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-igw"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-047f22ce4e7bb808d",
            "owner_id": "656417668387",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e5624b2994afa92",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "KPMG-test-route"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0229de21d92e997fa",
            "route_table_id": "rtb-047f22ce4e7bb808d",
            "subnet_id": "subnet-034972a8ca93610fc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.internet_route",
            "module.vpc.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd82516750f8ca3",
            "route_table_id": "rtb-047f22ce4e7bb808d",
            "subnet_id": "subnet-0dc96795479ce3589"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.internet_route",
            "module.vpc.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0133633e6cedc9a11",
            "route_table_id": "rtb-047f22ce4e7bb808d",
            "subnet_id": "subnet-00b41d3f3ea40ed4b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.internet_route",
            "module.vpc.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:security-group/sg-0fedc3f2bb5fa6f7a",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fedc3f2bb5fa6f7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_allow_http",
            "name_prefix": "",
            "owner_id": "656417668387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb_allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:security-group/sg-04140f7a6586aa5ee",
            "description": "Allow HTTP traffic from ELB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04140f7a6586aa5ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fedc3f2bb5fa6f7a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_allow_http",
            "name_prefix": "",
            "owner_id": "656417668387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.security.aws_security_group.elb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-069784e77a3b0e273",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-069784e77a3b0e273",
            "map_public_ip_on_launch": false,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-app-subnet-1"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-0e97fdc92abdd8afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-0e97fdc92abdd8afc",
            "map_public_ip_on_launch": false,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-app-subnet-2"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-0ff45ab8e5c30416f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-0ff45ab8e5c30416f",
            "map_public_ip_on_launch": false,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-app-subnet-3"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-07bdbcb02d6c44c8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-07bdbcb02d6c44c8d",
            "map_public_ip_on_launch": false,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-db-subnet-1"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-0370bb095b2725c90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.31.0/24",
            "id": "subnet-0370bb095b2725c90",
            "map_public_ip_on_launch": false,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-db-subnet-2"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-08db79eb9f59d9cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/24",
            "id": "subnet-08db79eb9f59d9cf2",
            "map_public_ip_on_launch": false,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-db-subnet-3"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-034972a8ca93610fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-034972a8ca93610fc",
            "map_public_ip_on_launch": true,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-web-subnet-1"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-0dc96795479ce3589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0dc96795479ce3589",
            "map_public_ip_on_launch": true,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-web-subnet-2"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:subnet/subnet-00b41d3f3ea40ed4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-00b41d3f3ea40ed4b",
            "map_public_ip_on_launch": true,
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test-web-subnet-3"
            },
            "vpc_id": "vpc-0257d5c2e2f298224"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656417668387:vpc/vpc-0257d5c2e2f298224",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c646f026f7b641f1",
            "default_route_table_id": "rtb-0ceddc4ba3bf504c0",
            "default_security_group_id": "sg-048e5e230cdabd3a8",
            "dhcp_options_id": "dopt-ee8bee94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0257d5c2e2f298224",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ceddc4ba3bf504c0",
            "owner_id": "656417668387",
            "tags": {
              "Name": "KPMG-test"
            }
          }
        }
      ]
    }
  ]
}